tests-compare/fixtures/babel/packages/babel-parser/test/fixtures/esprima/invalid-syntax/migrated_0042/input.js
var x = /[a-z\n]/\ux
